# vlalertsbot

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pickup.py  pyproject.toml  requirements.txt  vl_alerts.db
.github/workflows/: main.yml  run_bot.yml
tests/: conftest.py  test_alert.py  test_bot.py  test_notify.py
tests/alerts/: trade_closing.txt  trade_percent.txt  trade_rank.txt  trade_rank_1.txt  trade_rank_rsi_oversold.txt
vlalertsbot/: __init__.py  alert.py  bot.py  config.py  notify.py
