[tool.poetry]
  name = "vlalertsbot"
  version = "0.0.1"
  description = "Alerts bot for Volume Leaders emails"
  authors = ["Major Hayden <fmajor@mhtx.net>"]
  repository = "https://github.com/major/vlalertsbot"
  documentation = "https://major.github.io/vlalertsbot/"
  readme = "README.md"
  packages = [{ include = "vlalertsbot" }]

  [tool.poetry.dependencies]
    python = ">=3.12,<4.0"
    imapclient = "^3.0.1"
    discord-webhook = "^1.3.1"
    pickledb = "^0.9.2"

  [tool.poetry.group.dev.dependencies]
    pytest = "^7.2.0"
    pytest-cov = "^4.0.0"
    deptry = "^0.12.0"
    mypy = "^1.5.1"
    pre-commit = "^3.4.0"
    tox = "^4.11.1"
    pytest-sugar = "^1.0.0"
    pytest-randomly = "^3.15.0"


[build-system]
  requires = ["poetry-core>=1.0.0"]
  build-backend = "poetry.core.masonry.api"

[tool.mypy]
  files = ["vlalertsbot"]
  disable_error_code = "import-untyped"
  disallow_untyped_defs = "True"
  disallow_any_unimported = "True"
  no_implicit_optional = "True"
  check_untyped_defs = "True"
  warn_return_any = "False"
  warn_unused_ignores = "True"
  show_error_codes = "True"

[tool.pytest.ini_options]
  testpaths = ["tests"]

[tool.ruff]
  target-version = "py37"
  line-length = 120
  fix = true
  select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
  ]
  ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
  ]

  [tool.ruff.format]
    preview = true

  [tool.coverage.report]
    skip_empty = true

  [tool.coverage.run]
    branch = true
    source = ["vlalertsbot"]


  [tool.ruff.per-file-ignores]
    "tests/*" = ["S101"]
